--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="title">Survey Form</h1>
+    <h1 id="title">freeCodeCamp Survey Form</h1>
 
     <p id="description">
       Thank you for taking the time to help us improve the platform
